added documentation to backend and docker files

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
- 
+# Cart Management System - Environment Variables Template
+# Author: AJ McCrory
+# Created: 2024
+# Description: Template for required environment variables
+#              Copy this file to .env and fill in your values
+
+# Database configuration
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=cart_management
+MYSQL_USER=
+MYSQL_PASSWORD=
+SECRET_KEY=
+
+# API configuration
+REACT_APP_API_URL=http://localhost:5000
