--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,8 +9,6 @@ Flask-Cors==3.0.10
 PyMySQL==1.0.2
 python-dotenv==0.19.0
 Werkzeug==2.0.1
-cryptography>=42.0.0
+cryptography==3.4.7
 pytz==2023.3
-sqlalchemy==1.4.46
-mysqlclient==2.0.3
-mysql-connector-python==8.0.26
+sqlalchemy==1.4.23
